[tool.poetry]
name = "shtml-sdk"
version = "0.1.0"
description = ""
authors = ["Brian Li <brian@brianli.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
pysui = "^0.62.1"
markdown = "^3.6"
pydantic = "^2.7.4"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"

[tool.poetry.scripts]
shtml = "shtml_sdk.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
